# Bose-Einstein-Condensate-Memory-Model-Neural-Analogy

./: .gitignore  BT38_BEC_Memory_Model.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt  test_p52_real_data.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bec_memory/: __init__.py  false_memory.py  forgetting.py  gpe.py  model.py  utils.py
docs/: THEORY.md
experiments/: __init__.py  p52_real_data.py
figures/: p52_bec_memory_results.json
tests/: test_forgetting.py  test_gpe.py  test_model.py  test_p52_integration.py
